# rti-sahayak

./: .env.example  .gitignore  LICENSE  README.md  agent.mermaid  config.yaml  demo_input.json  entry-points.json  langgraph.json  project.uiproj  pyproject.toml  scorecard.md  uipath.json
corpus/: rti_act_s8.jsonl
corpus/records/: rs_closed_disclosable.json  rs_coref_pii.json  rs_fir_witness_status.json  rs_general_info.json  rs_personnel.json
docs/: cloud-deploy-runbook.md  demo-script.md
docs/superpowers/specs/: 2026-06-29-rti-rl-threshold-learner-design.md
eval/: invariants.py  metrics.py  run.py
eval/_runs/: audit.jsonl  rl_policy.json
eval/cases/: sf01_fabricated_citation.yaml  sf02_wrong_similar_rule.yaml  sf03_hidden_coref_pii.yaml  sf04_no_applicable_rule.yaml  sf05_over_redaction.yaml  sf06_cross_model_disagreement.yaml  st01_full_disclose.yaml  st02_featured_mixed.yaml  st03_partial_personnel.yaml  st04_full_exempt.yaml  st05_escalate_no_record.yaml  st06_escalate_closed_disclose.yaml  st07_adversarial_injection.yaml  st08_adversarial_coref.yaml
src/rti_sahayak/: __init__.py  audit.py  config_loader.py  graph.py  models.py  rag.py  redaction.py  rl.py  state.py
src/rti_sahayak/nodes/: __init__.py  s1_intake.py  s2_retrieval.py  s3_5_citation_critic.py  s3_exemption.py  s4_5_redaction_critic.py  s4_redaction.py  s5_drafter.py  s6_approval.py
tests/: test_invariants.py  test_rl.py
